--- a/style.css
+++ b/style.css
@@ -1287,18 +1287,19 @@ section.archive {
 }
 
 .footer__wrapper {
-  padding: 0 16px;
-}
-
-.footer__content {
-  padding: 40px 0;
+  /* this div is solely for adding the padding, more of a utility */
+  /* because .footer__content the real one is occupied by .maxwidth and cannot set horizontal paddings */
+  padding: 32px 16px;
   display: grid;
+  grid-gap: 16px;
+  grid-column-gap: 16px;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 @media (max-width: 959px) {
-  .footer__content {
-    grid-template-columns: 1fr;
+  .footer__wrapper {
+    display: block;
   }
 }
 
@@ -1323,6 +1324,15 @@ section.archive {
   line-height: 1.7;
   color: #000;
   color: #FFFFFF;
+}
+
+.footer__content__widgets {
+  margin: 0 0 16px;
+}
+
+.footer__content__copyright {
+  grid-row: 2/3;
+  grid-column: 1/3;
 }
 
 .header {
@@ -1390,6 +1400,12 @@ section.archive {
   margin: 0 16px;
 }
 
+@media (max-width: 959px) {
+  .header__nav .menu {
+    margin: 0 0 0 16px;
+  }
+}
+
 .header__nav .menu-item {
   display: inline-block;
   white-space: nowrap;
@@ -1408,12 +1424,20 @@ section.archive {
 
 @media (max-width: 959px) {
   .header__nav .menu-item a {
-    margin: 0 24px 0 0;
+    margin: 0 16px 0 0;
   }
 }
 
 .header__nav .menu-item:first-child a {
   margin: 0;
+  /* remove left margin on desktop */
+}
+
+@media (max-width: 959px) {
+  .header__nav .menu-item:first-child a {
+    margin: 0 16px 0 0;
+    /* restore normal margin on mobile */
+  }
 }
 
 .hero {
